[project]
name = "certreach"
version = "0.1.0"
description = "certifiable reachability analysis"
authors = [
    {name = "Prashant Solanki", email = "p.solanki@tudelft.nl"},
    {name = "Nikolaus Vertovec", email = "nikolaus.vertovec@st-hughs.ox.ac.uk"},
    {name = "Yannik Schnitzer", email = "yannik.schnitzer@keble.ox.ac.uk"}
]

dependencies = [
    "dreal==4.21.6.2",
    "matplotlib==3.9.2",
    "numpy",
    "scipy==1.13.1",
    "sympy==1.13.1",
    "tensorboard",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm",
    "configargparse",
]

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["certreach"]

[tool.hatch.build]
only-packages = true