[project]
name = "CARe"
version = "1.0.0"
description = "certifiable reachability analysis"
authors = [
    {name = "Nikolaus Vertovec", email = "nikolaus.vertovec@st-hughs.ox.ac.uk"},
    {name = "Prashant Solanki", email = "p.solanki@tudelft.nl"},
    {name = "Yannik Schnitzer", email = "yannik.schnitzer@keble.ox.ac.uk"}
]

dependencies = [
    "dreal",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
    "configargparse",
    "ray[tune]"
]

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["care"]

[tool.hatch.build]
only-packages = true